# automl-exam-ss25

./: .gitignore  final_test_preds.npy  pipeline.py  pipeline_demo.py  pipeline_final.py  pipeline_visualizations.py  pyproject.toml  run.py  run_final.py  run_instructions.md  setup_data.py  team_info.txt  test_evaluation.py
automl/: __init__.py  bohb_optimization.py  bohb_optimization_heavy.py  constants.py  core.py  datasets.py  logging_utils.py  meta_features.py  models.py  old_visualizer.py  reward_calculation.py  rl_agent.py  utils.py  visualizer.py
tests/: run_tests.py  test_bohb_budget.py  test_complete_integration.py  test_complex_model.py  test_datasets.py  test_integration.py  test_medium_model.py  test_simple_model.py  test_unified_prediction.py
